// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-css-modules should create valid app 1`] = `
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="/main-fadb2269a374a06075a5.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/runtime-554e53c2f72903d6f45f.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~main-de7ea8f2a0d5ba76c5b9.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/main-a11ee3ceb7e73f40a468.js"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo">
        <div class="_3YtmnHj"
             data-automation-text="true"
        >
          Initial render
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="/runtime-554e53c2f72903d6f45f.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~main-de7ea8f2a0d5ba76c5b9.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/main-a11ee3ceb7e73f40a468.js"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
         <div class="_3YtmnHj"
              data-automation-text="true"
         >
-          Initial render
+          Updated render
         </div>
       </div>
     </div>

`;

exports[`react-css-modules should generate the expected files 1`] = `
Object {
  "index.html": <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="/main-fadb2269a374a06075a5.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/runtime-554e53c2f72903d6f45f.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~main-de7ea8f2a0d5ba76c5b9.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/main-a11ee3ceb7e73f40a468.js"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo">
        <div class="_3YtmnHj"
             data-automation-text="true"
        >
          Initial render
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="/runtime-554e53c2f72903d6f45f.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~main-de7ea8f2a0d5ba76c5b9.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/main-a11ee3ceb7e73f40a468.js"
    >
    </script>
  </body>
</html>,
  "main-a11ee3ceb7e73f40a468.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main-fadb2269a374a06075a5.css": ._1brbpTo {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
._1brbpTo ._3YtmnHj {
  font-size: 32px;
}
,
  "runtime-554e53c2f72903d6f45f.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-de7ea8f2a0d5ba76c5b9.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;
